--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
                 <button id="cancelbtn" type="reset" onclick="formcancel()">Clear</button>
             </form><br>
             Already have an account?
-            <a href="index.html">Sign in</a>
+            <a href="signin.html">Sign in</a>
         </div>
     </div>
 
